##############################################
######        Bomber Project         ######
##############################################
Start Date: 2019 04 22
Author: Muad


##### TO DO ####
 0. Add empty Three.JS project
 1. Define player
 2. Spawn player placeholder
 3. Move player placeholder
 4. Spawn some walls
 5. Define gamestate

##### END OF TO DO ####
