@@ -2,10 +2,14 @@ class game {
     
     constructor(width, height) {
         console.log('Constructor: New game!');
+        this.width = width;
+        this.height = height;
         this.state = 'run';           // { setup, run, pause, over }
         this.board = this.createEmptyBoard(width, height);
-        this.player1 = new player();
+        this.player1 = new player(1, 0, 1);
         scene.add(this.player1.pawn);
+        this.player2 = new player(width-2, 0, height-2);
+        scene.add(this.player2.pawn);
         this.spawnWalls(width, height);
         this.print();
     }
@@ -13,13 +17,23 @@ class game {
     update() {
     
         // console.log("frame")
-        if (game.state == 'run') {
+        if (this.state === 'run') {
             
-        } else if (game.state == 'start') {
+            for (let i = 0; i < this.height; i++) {
+                for (let j = 0; j < this.width; j++) {
+                    if (this.board[i][j] == 'p1' || this.board[i][j] == 'p2') {
+                        this.board[i][j] = '.';
+                    }
+                }
+            }
+            this.board[this.player1.position.z][this.player1.position.x] = 'p1';
+            this.board[this.player2.position.z][this.player2.position.x] = 'p2';
             
-        } else if (game.state == 'over') {
+        } else if (this.state === 'start') {
             
-        } else if (game.state == 'pause') {
+        } else if (this.state === 'over') {
+            
+        } else if (this.state === 'pause') {
             
         }
     
@@ -48,16 +62,25 @@ class game {
         }
     }
 
+    move(player, x, y, z) {
+        if ( player == 1 ) {
+            this.player1.move(x, y, z);
+        } else
+        if ( player == 2 ) {
+            this.player2.move(x, y, z);
+        }
+    }
+
     spawnWalls(width, height) {
         let wallGeo = new THREE.BoxBufferGeometry( tileSize, tileSize, tileSize );
         let wallMaterial = new THREE.MeshBasicMaterial( { color: 0xcccccc, opacity: 0.9, transparent: true } );
         
-        for (let i = 0; i < width; i++) {
-            for (let j = 0; j < height; j++) {
-                if (i==0 || j==0 || i==width-1 || j==height-1 || (i%2==0 && j%2==0)) {
+        for (let i = 0; i < height; i++) {
+            for (let j = 0; j < width; j++) {
+                if (i==0 || j==0 || i==height-1 || j==width-1 || (i%2==0 && j%2==0)) {
                     let wall = new THREE.Mesh( wallGeo, wallMaterial );
-                    wall.position.x = i * tileSize;
-                    wall.position.z = j * tileSize;
+                    wall.position.x = j * tileSize;
+                    wall.position.z = i * tileSize;
                     scene.add(wall);
                     this.board[i][j] = 'W';
                 }
@@ -67,9 +90,9 @@ class game {
 
     createEmptyBoard(width, height) {
         let board = [];
-        for (let i = 0; i < width; i++) {
+        for (let i = 0; i < height; i++) {
             let row = []
-            for (let j = 0; j < height; j++) {
+            for (let j = 0; j < width; j++) {
                 row.push('.');
             }
             board.push(row);
